# wi17-computer-graphics

./: CMakeLists.txt
01.Tetrahedra/: CMakeLists.txt  Tetrahedra.cpp
01.Tetrahedra/Assets/: Tetrahedra.cpp  Tetrahedra.h
02.RollDisk/: CMakeLists.txt  RollDisk.cpp
02.RollDisk/Assets/: RollDisk.cpp  RollDisk.h
03.WireFrameScene/: CMakeLists.txt  WireFrameScene.cpp
03.WireFrameScene/Assets/: WireFrameScene.cpp  WireFrameScene.h
GLUTWrapper/: CMakeLists.txt
GLUTWrapper/include/GLUT/: Common.h  Constants.h  ModernGL.h  Window.h
GLUTWrapper/src/: Constants.cpp  Window.cpp
